feat: implement product management
