# backend/src/dto/mod.rs
@@ -1,4 +1,5 @@
 pub mod auth;
 pub mod health;
 pub mod permissions;
+pub mod products;
 pub mod users;
