# backend/src/handlers/mod.rs
@@ -2,6 +2,7 @@ pub mod auth;
 pub(crate) mod error;
 mod health;
 pub mod permissions;
+pub mod products;
 pub mod users;
 
 pub use health::health;
